[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sten"
version = "0.0.1"
dependencies = [
    "torch==1.11", # Currently broken with 1.12  
    "torchvision",
    "torchaudio",
    "numpy",
    "scipy",
    "pytest",
    "notebook",
    "transformers",
    "tqdm",
    "boto3",
    "requests",
    "regex",
    "sentencepiece",
    "sacremoses",
    "importlib-metadata",
    "tabulate",
    "black",
]