[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sten"
version = "0.0.4"
description = "STen: An Interface for Efficient Sparsity in PyTorch"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "pytest",
    "notebook",
    "transformers",
    "tqdm",
    "boto3",
    "requests",
    "regex",
    "sentencepiece",
    "sacremoses",
    "importlib-metadata",
    "tabulate",
    "black",
    "coverage",
    "pytest-cov",
    "pytest-xdist",
    "py-cpuinfo",
    "dace",
]

[project.urls]
"Homepage" = "https://github.com/spcl/sten"
"Bug Tracker" = "https://github.com/spcl/sten/issues"